# irnas-versioninfo-lib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  east.yml  generated_version_info.h.in  git_watcher.cmake  makefile  version_info.c  version_info.h  west.yml
.github/: pull_request_template.md
.github/workflows/: build.yaml  create-release.yaml  label_pr.yml  publish-release.yaml
app/basic/: CMakeLists.txt  README.md  prj.conf
app/basic/src/: main.c
app/with_east/: README.md
app/with_east/conf/: common.conf
lib/: CMakeLists.txt  Kconfig
lib/version_info/: CMakeLists.txt  Kconfig  version_info.c
samples/basic/: CMakeLists.txt  README.md  prj.conf
samples/basic/src/: main.c
version-info/: CMakeLists.txt  Kconfig  git_watcher.cmake  version_info.c  version_info.h
zephyr/: module.yml
